Fixing problems on mobile design

--- a/src/components/Buttons.module.scss
+++ b/src/components/Buttons.module.scss
@@ -1,13 +1,17 @@
 .buttonsWrapper {
-    padding: 2rem 0;
+    padding: 2rem 3%;
 
     .buttons {
         justify-content: center;
         max-width: 896px;
         margin: 0 auto;
         display: flex;
-        flex-flow: row nowrap;
-        gap: 1.5rem;
+        flex-flow: row wrap;
+        gap: 0.75rem;
+
+        @include sizeTablet {
+            gap: 1.5rem;
+        }
 
         .button {
             font-family: $font-sans;
