--- a/src/components/Paragraph.module.scss
+++ b/src/components/Paragraph.module.scss
@@ -1,5 +1,6 @@
 .paragraphWrapper {
     padding-bottom: 2rem;
+    padding: 0 3% 2rem 3%;
     
     .paragraph {
         margin: 0 auto;
